# boardwright

./: .env.example  LICENSE  README.md  TRADEMARK.md  main.py  pyproject.toml  requirements.txt  setup.sh
boardwright/: placement.py  router.py
boardwright/tools/: pcb_checks.py  pcb_layout.py  research.py
docs/: PROJECT.md  RELEASING.md
kicad_agent/: __init__.py  agent.py  cli.py  dispatcher.py  router.py  schematic_io.py  tools.py
kicad_agent/tools/: pcb_layout.py  project.py  research.py  routing.py  schematic.py
tests/: test_dfm.py  test_lcsc.py  test_placement.py
